<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.julia.calculate.MainActivity"
    android:background="#3f51b5">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_in"
        android:id="@+id/button"
        android:onClick="goToNewActivity"
        android:width="230dp"
        android:background="#ea1e63"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:minWidth="300dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText"
        android:textColor="#ffffff"
        android:textIsSelectable="false"
        android:layout_marginTop="25dp"
        android:elegantTextHeight="false"
        android:enabled="true"
        android:minWidth="290dp"
        android:paddingLeft="40dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColorLink="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:minWidth="290dp"
        android:paddingLeft="40dp"
        android:textColorLink="#ffffff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:contentDescription=""
        android:layout_alignTop="@+id/editText"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Txt_Calc"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="32dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Txt_ForgetPass"
        android:id="@+id/textView2"
        android:textColor="#ffffff"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:id="@+id/frameLayout"
        android:layout_alignParentBottom="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:layout_gravity="top|left"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView4"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="15dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView5"
            android:layout_gravity="right|top"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:clickable="true"
            android:layout_width="85dp"
            android:layout_height="43dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Txt_loginWithGoogle"
            android:id="@+id/textView4"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:onClick="enterWithGoogle"
            android:textStyle="italic"
            android:focusableInTouchMode="false" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="47dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Txt_loginWithFacebook"
            android:id="@+id/textView3"
            android:layout_gravity="left|center_vertical"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:onClick="enterWithFacebook"
            android:clickable="true"
            android:linksClickable="true"
            android:focusable="false"
            android:singleLine="false"
            android:textIsSelectable="false"
            android:textStyle="italic"
            android:focusableInTouchMode="false" />

        <TextView
            android:layout_width="85dp"
            android:layout_height="48dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Txt_loginWithTwitter"
            android:id="@+id/textView5"
            android:layout_gravity="right|center_vertical"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:onClick="enterWithTwitter"
            android:textStyle="italic"
            android:linksClickable="false"
            android:focusableInTouchMode="false" />

        <TextView
            android:layout_width="107dp"
            android:layout_height="31dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Txt_reg"
            android:id="@+id/textView6"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="#ffffff" />
    </FrameLayout>

</RelativeLayout>
